@@ -1,3 +1,6 @@
+HEAD
+	+ Make use of VerifyPeer to false on EBox::RESTClient as we
+	  don't verify other HA hosts
 3.5.1
 	+ Avoid warning flag on smart match experimental feature
 3.5
